--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Este projeto é uma landing page estática para apresentação do PrimeBiome, com foco em responsividade, performance básica e conversão.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -19,5 +22,8 @@
   "homepage": "https://github.com/jessedelima/primebiome#readme",
   "dependencies": {
     "express": "^5.2.1"
+  },
+  "devDependencies": {
+    "vite": "^7.3.0"
   }
 }
